...
    
    // -- CREATING COMPONENTS -- 
    
    let logOutButton: UIButton = {
        
        let h = UIButton(type: .system)
            h.setTitle("LogOut", for: .normal)
            h.setTitleColor(.white, for: .normal)
        h.addTarget(self, action: #selector(goBack), for: .touchUpInside)
        return h
    }()
    
    // -- FINAL CREATING COMPONENTS --
...
